# churnpilot

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  STATUS.md  WORKFLOW.md  pyproject.toml
churnpilot/: __init__.py  artifacts.py  charts.py  cli.py  config.py  evaluate.py  generate.py  model.py  monitor.py  policy.py  profile.py  recommend.py  report.py  source.py  validate.py
docs/: ADRs.md  DESIGN_BRIEF.md  PRD.md  context.md  synthetic-data.md  v2-design-brief.md
tests/: test_compare.py  test_config.py  test_evaluate.py  test_generate.py  test_metrics.py  test_model.py  test_monitor.py  test_pipeline.py  test_pipeline_v2.py  test_policy.py  test_policy_contrast.py  test_profile.py  test_qini.py  test_recommend.py  test_report.py  test_run.py  test_smoke.py  test_source.py  test_split.py  test_treatment.py  test_uplift.py  test_validate.py
