[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "churnpilot"
version = "0.1.0"
description = "Config-driven churn/retention analysis — deterministic tested compute + AI-driven judgment."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "danielamendirichaga", email = "danielamendirichaga@gmail.com" }]
keywords = ["churn", "retention", "machine-learning", "ai-copilot", "ks", "psi"]

# Deterministic tested core imports ONLY numpy/pandas/pyarrow/pyyaml.
# scikit-learn / matplotlib / plotly / streamlit are used by the model, policy,
# chart, and dashboard layers — declared here, never imported by the tested core.
dependencies = [
    "typer>=0.12,<1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "streamlit>=1.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
]

[project.scripts]
churnpilot = "churnpilot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["churnpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]

# pandas ships no type stubs; pandas-stubs is too strict for this teaching codebase.
# Treat pandas as untyped rather than fully type-checking DataFrame ops.
[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true
